force-app/main/default/objects/FixMyStreetToConfirm__c/FixMyStreetToConfirm__c.object-meta.xml
<CustomObject>
    <label>FixMyStreetToConfirm</label>
    <nameField>
        <displayFormat>FMS-Confirm-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FixMyStreetToConfirm</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>