force-app/main/default/objects/FixMyStreetToConfirm__c/fields/Confirm_Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Service_Code__c</fullName>
    <label>Confirm Service Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>