force-app/main/default/objects/FixMyStreetToConfirm__c/fields/FixMyStreetCategories__c.field-meta.xml
<CustomField>
    <fullName>FixMyStreetCategories__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FixMyStreetCategories</label>
    <referenceTo>FixMyStreetCategories__c</referenceTo>
    <relationshipLabel>FixMyStreetToConfirm</relationshipLabel>
    <relationshipName>FixMyStreetToConfirm</relationshipName>
    <type>Lookup</type>
</CustomField>