force-app/main/default/objects/FixMyStreetToConfirm__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <formula>FixMyStreetCategories__r.Service_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordType</label>
    <type>Text</type>
</CustomField>