force-app/main/default/objects/FixMyStreetToConfirm__c/fields/SecondField__c.field-meta.xml
<CustomField>
    <fullName>SecondField__c</fullName>
    <label>SecondField</label>
    <length>100</length>
    <type>Text</type>
</CustomField>