force-app/main/default/objects/FixMyStreetToConfirm__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FixMyStreetCategories__c</columns>
    <columns>SecondField__c</columns>
    <columns>FieldValue__c</columns>
    <columns>Confirm_Service_Code__c</columns>
    <columns>Confirm_Subject_Code__c</columns>
    <columns>RecordType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>